# cpp-project-

./: CMakeLists.txt  README.md  camera.cpp  gradient.cpp
